refactor per ide tip