@@ -1,13 +1,12 @@
 package kwic.kwicio;
 
 import java.nio.file.Files;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 
 public class Reader {
     public static String READ(String path) {
         try {
-            return new String(Files.readAllBytes(Path.of(path)), StandardCharsets.UTF_8);
+            return Files.readString(Path.of(path));
         } catch (Exception __) {
             return "";
         }
